Corrections des bugs